# rusty-tomato

./: .gitignore  Cargo.toml  README.md  error  log
cli/src/: main.rs
gui/: Cargo.toml
gui/dev_scripts/: run_in_host_from_wsl.sh
gui/src/: app.rs  main.rs  pomodoro_technique.rs
src/: app.rs  main.rs
src/widgets/: clock.rs  timer.rs
