[package]
name = "pomodoro"
version = "0.1.0"
authors = ["Erick Rocha <erickkrocha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#failure = "0.1"
structopt = "0.3"
chrono = "0.4.10"
crossterm = "0.17"
tui = { version = "0.9.5", default-features = false, features = ['crossterm'] }