[package]
name = "gui"
version = "0.1.0"
authors = ["Erick Rocha <erickkrocha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
crossterm = "0.17"
rodio = "0.11.0"
tui = { version = "0.10.0", default-features = false, features = ['crossterm'] }
wsl = "0.1.0"
